add separate long read and short read paths
