# backend/swagger_server/controllers/samples_controller.py
@@ -1,20 +1,10 @@
 import connexion
 import six
 
-from flask import g
 from swagger_server.models.body import Body  # noqa: E501
 from swagger_server.models.sample import Sample  # noqa: E501
 from swagger_server import util
 
-def format_sample(obj):
-    return {
-        'id': obj['id'],
-        'author_email': obj['author_email'],
-        'created': obj['created'],
-        'last_updated': obj['last_updated'],
-        'path_one': obj['path_one'],
-        'path_two': obj['path_two']
-    }
 
 def samples_get():  # noqa: E501
     """List all samples
@@ -24,7 +14,7 @@ def samples_get():  # noqa: E501
 
     :rtype: List[Sample]
     """
-    return [format_sample(sample) for sample in g.db]
+    return 'do some magic!'
 
 
 def samples_post(body=None):  # noqa: E501
@@ -39,5 +29,4 @@ def samples_post(body=None):  # noqa: E501
     """
     if connexion.request.is_json:
         body = Body.from_dict(connexion.request.get_json())  # noqa: E501
-    # TODO: Create configs and add to g.db via https://pydblite.readthedocs.io/en/latest/pythonengine.html#insert-a-new-record
     return 'do some magic!'
